// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Recipient Component Domain Resolution should match snapshot 1`] = `
<div>
  <div
    class="send__select-recipient-wrapper"
  >
    <div
      class="send__select-recipient-wrapper__group-item"
    >
      <div
        class=""
      >
        <div
          class="identicon"
          style="height: 28px; width: 28px; border-radius: 14px;"
        >
          <div
            style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 28px; height: 28px; display: inline-block; background: rgb(24, 151, 242);"
          >
            <svg
              height="28"
              width="28"
              x="0"
              y="0"
            >
              <rect
                fill="#2362E1"
                height="28"
                transform="translate(3.140663911693453 -4.667521795329333) rotate(458.4 14 14)"
                width="28"
                x="0"
                y="0"
              />
              <rect
                fill="#F94301"
                height="28"
                transform="translate(-13.443026878443934 6.993307681050803) rotate(268.8 14 14)"
                width="28"
                x="0"
                y="0"
              />
              <rect
                fill="#FA7900"
                height="28"
                transform="translate(-7.941722319388745 25.795013895597954) rotate(117.3 14 14)"
                width="28"
                x="0"
                y="0"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="send__select-recipient-wrapper__group-item__content"
      >
        <div
          class="send__select-recipient-wrapper__group-item__title"
        >
          DNS Re...tion
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Add Recipient Component Own Account Recipient Search should match snapshot 1`] = `
<div>
  <div
    class="send__select-recipient-wrapper"
  >
    <div
      class="send__select-recipient-wrapper__list"
    >
      <a
        class="button btn-link send__select-recipient-wrapper__list__link"
        role="button"
        tabindex="0"
      >
        <span
          class="box mm-icon mm-icon--size-md box--display-inline-block box--flex-direction-row box--color-inherit"
          style="mask-image: url('./images/icons/arrow-left.svg');"
        />
        Back to all
      </a>
      <div
        class="send__select-recipient-wrapper__group"
        data-testid="recipient-group"
      >
        <div
          class="send__select-recipient-wrapper__group-label"
        >
          My accounts
        </div>
        <div
          class="send__select-recipient-wrapper__group-item"
        >
          <div
            class=""
          >
            <div
              class="identicon"
              style="height: 28px; width: 28px; border-radius: 14px;"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 28px; height: 28px; display: inline-block; background: rgb(250, 58, 0);"
              >
                <svg
                  height="28"
                  width="28"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#18CDF2"
                    height="28"
                    transform="translate(-0.9173443158196976 -2.8912485607779366) rotate(328.9 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#035E56"
                    height="28"
                    transform="translate(-16.01115399522804 9.268404137780026) rotate(176.2 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F26602"
                    height="28"
                    transform="translate(14.584361765945934 -12.429497257622447) rotate(468.9 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="send__select-recipient-wrapper__group-item__content"
            data-testid="recipient"
          >
            <div
              class="send__select-recipient-wrapper__group-item__title"
            >
              Test Account
            </div>
            <div
              class="send__select-recipient-wrapper__group-item__subtitle"
            >
              0x0dcd...e7bc
            </div>
          </div>
        </div>
        <div
          class="send__select-recipient-wrapper__group-item"
        >
          <div
            class=""
          >
            <div
              class="identicon"
              style="height: 28px; width: 28px; border-radius: 14px;"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 28px; height: 28px; display: inline-block; background: rgb(245, 143, 0);"
              >
                <svg
                  height="28"
                  width="28"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#018E74"
                    height="28"
                    transform="translate(5.524091896954402 -4.749745570944453) rotate(358.4 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#18CAF2"
                    height="28"
                    transform="translate(6.724913619395038 -10.621076649467508) rotate(414.8 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#C81474"
                    height="28"
                    transform="translate(-4.907795154940259 -21.945972385956175) rotate(322.3 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="send__select-recipient-wrapper__group-item__content"
            data-testid="recipient"
          >
            <div
              class="send__select-recipient-wrapper__group-item__title"
            >
              Test Account 2
            </div>
            <div
              class="send__select-recipient-wrapper__group-item__subtitle"
            >
              0xec1a...251b
            </div>
          </div>
        </div>
        <div
          class="send__select-recipient-wrapper__group-item"
        >
          <div
            class=""
          >
            <div
              class="identicon"
              style="height: 28px; width: 28px; border-radius: 14px;"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 28px; height: 28px; display: inline-block; background: rgb(249, 100, 1);"
              >
                <svg
                  height="28"
                  width="28"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#C81432"
                    height="28"
                    transform="translate(-0.510690249475231 -2.7159619403490534) rotate(331.7 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#187AF2"
                    height="28"
                    transform="translate(-11.127931122273568 5.54021528290869) rotate(160.5 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#FB183E"
                    height="28"
                    transform="translate(25.084575445435807 -2.611206239472919) rotate(517.6 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="send__select-recipient-wrapper__group-item__content"
            data-testid="recipient"
          >
            <div
              class="send__select-recipient-wrapper__group-item__title"
            >
              Test Ledger 1
            </div>
            <div
              class="send__select-recipient-wrapper__group-item__subtitle"
            >
              0xc42e...8813
            </div>
          </div>
        </div>
        <div
          class="send__select-recipient-wrapper__group-item"
        >
          <div
            class=""
          >
            <div
              class="identicon"
              style="height: 28px; width: 28px; border-radius: 14px;"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 28px; height: 28px; display: inline-block; background: rgb(242, 206, 2);"
              >
                <svg
                  height="28"
                  width="28"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#2340E1"
                    height="28"
                    transform="translate(-1.7054541409645272 -0.893781972900803) rotate(257.0 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#016D8E"
                    height="28"
                    transform="translate(11.213543194590896 2.66257866392058) rotate(77.0 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F5F500"
                    height="28"
                    transform="translate(11.486654880888956 -19.46641853277226) rotate(465.0 14 14)"
                    width="28"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="send__select-recipient-wrapper__group-item__content"
            data-testid="recipient"
          >
            <div
              class="send__select-recipient-wrapper__group-item__title"
            >
              Test Account 3
            </div>
            <div
              class="send__select-recipient-wrapper__group-item__subtitle"
            >
              0xeb9e...4823
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Add Recipient Component Send State should match snapshot 1`] = `
<div>
  <div
    class="send__select-recipient-wrapper"
  >
    <div
      class="send__select-recipient-wrapper__group-item"
    >
      <div
        class=""
      >
        <div
          class="identicon"
          style="height: 28px; width: 28px; border-radius: 14px;"
        >
          <div
            style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 28px; height: 28px; display: inline-block; background: rgb(245, 143, 0);"
          >
            <svg
              height="28"
              width="28"
              x="0"
              y="0"
            >
              <rect
                fill="#018E74"
                height="28"
                transform="translate(5.524091896954402 -4.749745570944453) rotate(358.4 14 14)"
                width="28"
                x="0"
                y="0"
              />
              <rect
                fill="#18CAF2"
                height="28"
                transform="translate(6.724913619395038 -10.621076649467508) rotate(414.8 14 14)"
                width="28"
                x="0"
                y="0"
              />
              <rect
                fill="#C81474"
                height="28"
                transform="translate(-4.907795154940259 -21.945972385956175) rotate(322.3 14 14)"
                width="28"
                x="0"
                y="0"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="send__select-recipient-wrapper__group-item__content"
      >
        <div
          class="send__select-recipient-wrapper__group-item__title"
        >
          A
          c
          c
          o
          u
          n
          t
           
          2
        </div>
        <div
          class="send__select-recipient-wrapper__group-item__subtitle"
        >
          0xec1a...251b
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Add Recipient Component render should match snapshot 1`] = `
<div>
  <div
    class="send__select-recipient-wrapper"
  >
    <div
      class="send__select-recipient-wrapper__list"
    >
      <div
        class="send__select-recipient-wrapper__list"
      >
        <a
          class="button btn-link send__select-recipient-wrapper__list__link"
          role="button"
          tabindex="0"
        >
          Transfer between my accounts
        </a>
        <div
          class="send__select-recipient-wrapper__recent-group-wrapper"
        />
        <div
          class="send__select-recipient-wrapper__group"
          data-testid="recipient-group"
        >
          <div
            class="send__select-recipient-wrapper__group-label"
          >
            A
          </div>
          <div
            class="send__select-recipient-wrapper__group-item"
          >
            <div
              class=""
            >
              <div
                class="identicon"
                style="height: 28px; width: 28px; border-radius: 14px;"
              >
                <div
                  style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 28px; height: 28px; display: inline-block; background: rgb(249, 100, 1);"
                >
                  <svg
                    height="28"
                    width="28"
                    x="0"
                    y="0"
                  >
                    <rect
                      fill="#C81432"
                      height="28"
                      transform="translate(-0.510690249475231 -2.7159619403490534) rotate(331.7 14 14)"
                      width="28"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#187AF2"
                      height="28"
                      transform="translate(-11.127931122273568 5.54021528290869) rotate(160.5 14 14)"
                      width="28"
                      x="0"
                      y="0"
                    />
                    <rect
                      fill="#FB183E"
                      height="28"
                      transform="translate(25.084575445435807 -2.611206239472919) rotate(517.6 14 14)"
                      width="28"
                      x="0"
                      y="0"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="send__select-recipient-wrapper__group-item__content"
              data-testid="recipient"
            >
              <div
                class="send__select-recipient-wrapper__group-item__title"
              >
                Address Book Account 1
              </div>
              <div
                class="send__select-recipient-wrapper__group-item__subtitle"
              >
                0xc42e...8813
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
